# media_chronicle

./: .gitignore  README.md  pubspec.yaml  pyproject.toml
.agents/: agents.md
.agents/rules/: coding_standards.md  workflow_recipes.md
.antigravity/: coding_standards.md  instructions.md  workflow_recipes.md
docs/design_docs/: 00_milestone_summary.md  01_scaffold_media_chronicle.md  02_yolo_self_retraining_face_recognition.md  03_sequential_queue_multiselect_actions.md  04_architectural_best_practices_refactoring.md  05_native_desktop_migration.md  06_fast_load_bypass.md  07_code_modularisation.md  08_python_yolo_pipeline.md  09_riverpod_clean_architecture_setup.md
docs/knowledge_base/: 01_testing_and_mocking.md  02_layout_and_rendering.md  03_widget_lifecycle_and_controllers.md  04_state_management_and_performance.md  05_pure_dart_machine_learning.md  06_riverpod_provider_coexistence.md  lessons_learned.md
experiments/: yolo_pipeline.ipynb
lib/: app.dart  main.dart
lib/core/constants/: app_constants.dart
lib/core/theme/: app_theme.dart
lib/core/utils/: llm_helper.dart  media_helper.dart  postgres_sync_service.dart  (+1 more)
lib/features/: README.md
lib/state/: app_state.dart  app_state.g.dart
scripts/: README.md  yolo_config.yaml  yolo_data_prep.py  yolo_detect.py  yolo_evaluate.py  yolo_export.py  yolo_train.py
scripts/utils/: __init__.py  config.py  data_transforms.py  logging_setup.py
test/: providers_unit_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+41 files in other folders)
